# trends-ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/trends_ai/: __init__.py
