[project]
name = "trends-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey S. Haemer", email = "jeffrey.haemer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mutmut>=3.2.3",
    "numpy>=2.2.4",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "scipy>=1.15.2",
    "sympy>=1.13.3",
]

[project.scripts]
trends-ai = "trends_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
